Promjene na stranici LeoKlub.hr
Promjene na stranicama index.hr i style.css za stranicu LeoKLub.hr.

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 				<div class="row clearfix">
 
 					<div class="col-xl-12">
-						<div class=" topmargin bottommargin-lg center">
+						<div class=" topmargin  center">
 							<h2>LeoClub pogodnosti</h2>
 						</div>
 
@@ -173,7 +173,7 @@
 				</div>
 				<div class="row clearfix bottommargin-sm">
 
-					<div class="col-md-6 toppadding70">
+					<div class="col-md-6 toppadding30">
 						<h3>Bodovi za svaku kupnju</h3>
 
 						<p class="leadsmall">Prilikom svake kupnje skupljaš bodove. Za svakih potrošenih 20 kuna dobivaš 1 bod.
@@ -197,16 +197,16 @@
 
 				<div class="row clearfix bottommargin-sm ">
 
-					<div class="col-md-6 ">
-						<img src="images/leoclub.png" alt="LeoClub cijen"/>
-					</div>
 
-					<div class="col-md-6 toppadding70">
+
+					<div class="col-md-6 toppadding30">
 						<h3>LeoClub cijene</h3>
 
 						<p class="leadsmall">Cijene navedenih proizvoda su niže od redovnih, vrijede samo za članove LeoCluba i posebno su istaknute u poslovnicama i na web shopu Polleo Sporta.</p>
 						<p class="leadsmall">Kupnjom LeoClub artikala i dalje skupljaš nagradne bodove! </p>
-
+						<div class="col-md-6 ">
+							<img src="images/leoclub.png" alt="LeoClub cijen"/>
+						</div>
 
 					</div>
 
@@ -218,7 +218,7 @@
 
 				<div class="row clearfix bottommargin-sm ">
 
-					<div class="col-md-6 toppadding70">
+					<div class="col-md-6 toppadding30">
 						<h3>Kuponi</h3>
 
 						<p class="leadsmall">Našim članovima će biti dostupni kuponi koje mogu koristiti u poslovnicama ili web shopu.</p>
@@ -236,19 +236,20 @@
 				<div class="clearfix"></div>
 
 
-				<div class="row clearfix bottommargin-sm ">
+				<div class="row clearfix  ">
 
-					<div class="col-md-6 ">
-						<img src="images/nagradnibodovi.png" alt="Nagradni bodovi"/>
-					</div>
 
-					<div class="col-md-6 toppadding70">
+
+					<div class="col-md-6 toppadding30">
 						<h3>Nagradni bodovi</h3>
 
 						<p class="leadsmall">Očekuju te i dodatni nagradni bodovi za kupovinu iz određenih kategorija, odabranih brendova i proizvoda.</p>
 
 						<p class="leadsmall">Prije kupovine, pogledaj da li je artikl u LeoClub promociji i na taj način štedi više!</p>
 
+						<div class="col-md-6 ">
+							<img src="images/nagradnibodovi.png" alt="Nagradni bodovi"/>
+						</div>
 
 
 					</div>
@@ -321,59 +322,59 @@
 						</div>
 
 						<div class="toggle">
-							<div class="togglet"><i class="toggle-closed icon-angle-down"></i><i class="toggle-open icon-angle-up"></i>1. Što je LeoClub loyalty program?</div>
+							<div class="togglet"><i class="toggle-closed  icon-angle-down"></i><i class="toggle-open icon-angle-up"></i> 1. Što je LeoClub loyalty program?</div>
 							<div class="togglec">LeoClub loyalty program je program nagrađivanja koji ti omogućuje pogodnosti za kupovinu ili korištenje proizvoda i usluga u poslovnicama ili na web shopu Polleo Sporta.</div>
 						</div>
 
 						<div class="toggle">
-							<div class="togglet"><i class="toggle-closed icon-angle-down"></i><i class="toggle-open icon-angle-up"></i>2. Tko može postati članom LeoClub loyalty programa?</div>
+							<div class="togglet"><i class="toggle-closed   icon-angle-down"></i><i class="toggle-open icon-angle-up"></i>2. Tko može postati članom LeoClub loyalty programa?</div>
 							<div class="togglec">Članovi LeoClub loyalty programa mogu biti fizičke osobe minimalne starosti 16 godina s prebivalištem na području Europske Unije koji su prethodno ispunili pristupnicu.</div>
 						</div>
 
 						<div class="toggle">
-							<div class="togglet"><i class="toggle-closed icon-angle-down"></i><i class="toggle-open icon-angle-up"></i>3. Kako se mogu učlaniti u LeoClub loyalty program?</div>
+							<div class="togglet"><i class="toggle-closed  icon-angle-down"></i><i class="toggle-open icon-angle-up"></i>3. Kako se mogu učlaniti u LeoClub loyalty program? </div>
 							<div class="togglec">U LeoClub loyalty program možeš se učlaniti ispunjavanjem pristupnice na digitalnim terminalima u Polleo Sport poslovnicama, putem LeoClub mobilne aplikacije ili na web shopu Polleo Sporta.</div>
 						</div>
 
 						<div class="toggle">
-							<div class="togglet"><i class="toggle-closed icon-angle-down"></i><i class="toggle-open icon-angle-up"></i>4. Kako se sakupljaju bodovi?</div>
+							<div  class="togglet "><i class="toggle-closed icon-angle-down"></i><i class="toggle-open icon-angle-up"></i>4. Kako se sakupljaju bodovi?</div>
 							<div class="togglec">Bodove sakupljaš skeniranjem LeoClub kartice na Polleo Sport prodajnim mjestima ili kupovinom na Polleo Sport web shopu ako si prethodno prijavljen u svoj korisnički račun.</div>
 						</div>
 
 						<div class="toggle">
-							<div class="togglet"><i class="toggle-closed icon-angle-down"></i><i class="toggle-open icon-angle-up"></i>5. Koliko dugo vrijede sakupljeni bodovi?</div>
+							<div class="togglet"><i class="toggle-closed  icon-angle-down"></i><i class="toggle-open icon-angle-up"></i>5. Koliko dugo vrijede sakupljeni bodovi?</div>
 							<div class="togglec">Sakupljeni bodovi vrijede dok god si aktivni član LeoClub loyalty pograma.</div>
 						</div>
 
 						<div class="toggle">
-							<div class="togglet"><i class="toggle-closed icon-angle-down"></i><i class="toggle-open icon-angle-up"></i>6. Mogu li se moji bodovi prenijeti na nekoga drugog?</div>
+							<div class="togglet"><i class="toggle-closed  icon-angle-down"></i><i class="toggle-open icon-angle-up"></i>6. Mogu li se moji bodovi prenijeti na nekoga drugog?</div>
 							<div class="togglec">Bodovi se ne mogu prenositi na druge osobe te vrijede isključivo na nositelja LeoClub loyalty program kartice.</div>
 						</div>
 
 						<div class="toggle">
-							<div class="togglet"><i class="toggle-closed icon-angle-down"></i><i class="toggle-open icon-angle-up"></i>7. Koja je vrijednost boda?</div>
+							<div class="togglet"><i class="toggle-closed  icon-angle-down"></i><i class="toggle-open icon-angle-up"></i>7. Koja je vrijednost boda?</div>
 							<div class="togglec">Za potrošnju od 20 kn ostvaruješ 1 bod.</div>
 						</div>
 
 						<div class="toggle">
-							<div class="togglet"><i class="toggle-closed icon-angle-down"></i><i class="toggle-open icon-angle-up"></i>8. Što napraviti u slučaju gubitka ili oštećenja LeoClub kartice?</div>
+							<div class="togglet"><i class="toggle-closed  icon-angle-down"></i><i class="toggle-open icon-angle-up"></i>8. Što napraviti u slučaju gubitka ili oštećenja LeoClub kartice?</div>
 							<div class="togglec">Prijavi se u svoj profil na digitalnom terminalu u Polleo Sport poslovnici i zatraži novu karticu. Prati upute na terminalu i skeniraj karticu kako bi se povezala s tvojim podacima. Također možeš preuzeti LeoClub mobilnu aplikaciju i koristiti ju umjesto fizičke kartice.</div>
 						</div>
 
 
 						<div class="toggle">
-							<div class="togglet"><i class="toggle-closed icon-angle-down"></i><i class="toggle-open icon-angle-up"></i>9. Kako mogu promijeniti svoje osobne podatke?</div>
+							<div class="togglet"><i class="toggle-closed  icon-angle-down"></i><i class="toggle-open icon-angle-up"></i>9. Kako mogu promijeniti svoje osobne podatke?</div>
 							<div class="togglec">Svoje podatke uvijek možeš izmijeniti ili nadopuniti putem korisničkog profila na web shopu Polleo Sporta ili putem LeoClub mobilne aplikacije.</div>
 						</div>
 
 
 						<div class="toggle">
-							<div class="togglet"><i class="toggle-closed icon-angle-down"></i><i class="toggle-open icon-angle-up"></i>10. Na koji način se čuvaju i obrađuju moji podaci?</div>
+							<div class="togglet"><i class="toggle-closed  icon-angle-down"></i><i class="toggle-open icon-angle-up"></i>10. Na koji način se čuvaju i obrađuju moji podaci?</div>
 							<div class="togglec">Sve informacije o zaštiti i obradi vaših osobnih podataka možeš provjeriti pod Pravila privatnosti na web adresi leoclub.polleosport.hr</div>
 						</div>
 
 						<div class="toggle">
-							<div class="togglet"><i class="toggle-closed icon-angle-down"></i><i class="toggle-open icon-angle-up"></i>11. Kako mogu provjeriti svoje bodove?</div>
+							<div class="togglet"><i class="toggle-closed  icon-angle-down"></i><i class="toggle-open  icon-angle-up"></i>11. Kako mogu provjeriti svoje bodove?</div>
 							<div class="togglec">Svoje bodove možeš provjeriti prijavom na digitalnom terminalu u poslovnici Polleo Sporta, putem mobilne aplikacije ili putem svog web shop korisničkog računa.</div>
 						</div>
 
