Promjene na new

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	<meta property="og:url" content="https://leoclub.polleosport.hr" />
 	<meta property="og:description" content="LeoClub je program nagrađivanja stvoren za vjerne kupce Polleo Sporta. Svaku kupnju nagrađujemo bodovima koje mijenjaš za popuste na cijelu kupnju." />
 	<meta property="og:image" content="https://leoclub.polleosport.hr/images/dobrodosao_u_lav_kub.png" />
+	<script src="js/scroll.to.top.button.js"></script>
 
 </head>
 
@@ -127,7 +128,6 @@
 	<section id="content">
 
 		<div class="content-wrap">
-
 			<div class="container clearfix">
 				<div class="row clearfix">
 
@@ -171,9 +171,9 @@
 					</div>
 
 				</div>
-				<div class="row clearfix bottommargin-sm">
+				<div class="row clearfix ">
 
-					<div class="col-md-6 toppadding30">
+					<div class="col-md-6 toppadding30 mobile-site-padding">
 						<h3>Bodovi za svaku kupnju</h3>
 
 						<p class="leadsmall">Prilikom svake kupnje skupljaš bodove. Za svakih potrošenih 20 kuna dobivaš 1 bod.
@@ -187,7 +187,10 @@
 
 					</div>
 
-					<div class="col-md-6 ">
+					<div class="col-md-6 mobile-site toppadding30 mobile-site-padding ">
+						<img src="images/bodovi.png" alt="Bodovi za svaku kupnju"/>
+					</div>
+					<div class="col-md-6 dekstop-site toppadding50 mobile-site-padding ">
 						<img src="images/bodovi.png" alt="Bodovi za svaku kupnju"/>
 					</div>
 
@@ -197,18 +200,21 @@
 
 				<div class="row clearfix bottommargin-sm ">
 
+					<div class="mobile-site col-md-6 ">
+						<img  src="images/leoclub.png" alt="LeoClub cijen"/>
+					</div>
 
 
-					<div class="col-md-6 toppadding30">
+					<div class="col-md-6 toppadding70">
 						<h3>LeoClub cijene</h3>
 
 						<p class="leadsmall">Cijene navedenih proizvoda su niže od redovnih, vrijede samo za članove LeoCluba i posebno su istaknute u poslovnicama i na web shopu Polleo Sporta.</p>
 						<p class="leadsmall">Kupnjom LeoClub artikala i dalje skupljaš nagradne bodove! </p>
-						<div class="col-md-6 ">
-							<img src="images/leoclub.png" alt="LeoClub cijen"/>
+					</div>
+						<div class=" dekstop-site  col-md-6 toppadding50  ">
+							<img class="img" src="images/leoclub.png" alt="LeoClub cijen"/>
 						</div>
 
-					</div>
 
 
 
@@ -216,9 +222,9 @@
 
 				<div class="clearfix"></div>
 
-				<div class="row clearfix bottommargin-sm ">
+				<div class="row clearfix  ">
 
-					<div class="col-md-6 toppadding30">
+					<div class="col-md-6 dekstop-site toppadding30">
 						<h3>Kuponi</h3>
 
 						<p class="leadsmall">Našim članovima će biti dostupni kuponi koje mogu koristiti u poslovnicama ili web shopu.</p>
@@ -227,9 +233,21 @@
 
 					</div>
 
-					<div class="col-md-6 ">
+					<div class="col-md-6 mobile-site toppadding70">
+						<h3>Kuponi</h3>
+
+						<p class="leadsmall">Našim članovima će biti dostupni kuponi koje mogu koristiti u poslovnicama ili web shopu.</p>
+						<p class="leadsmall">Kuponi su dostupni putem LeoClub mobilne aplikacije ili na maloprodajnim računima u poslovnicama Polleo Sporta.   </p>
+
+
+					</div>
+					<div class="col-md-6 mobile-site  ">
 						<img src="images/vauceri.png" alt="Kuponi"/>
 					</div>
+					<div class="col-md-6 dekstop-site toppadding50  ">
+						<img src="images/vauceri.png" alt="Kuponi"/>
+					</div>
+
 
 				</div>
 
@@ -239,20 +257,24 @@
 				<div class="row clearfix  ">
 
 
+					<div class=" col-md-6  ">
+						<img class="mobile-site" src="images/nagradnibodovi.png" alt="Nagradni bodovi"/>
+					</div>
 
-					<div class="col-md-6 toppadding30">
+					<div class="col-md-6 toppadding70">
 						<h3>Nagradni bodovi</h3>
 
 						<p class="leadsmall">Očekuju te i dodatni nagradni bodovi za kupovinu iz određenih kategorija, odabranih brendova i proizvoda.</p>
 
 						<p class="leadsmall">Prije kupovine, pogledaj da li je artikl u LeoClub promociji i na taj način štedi više!</p>
-
-						<div class="col-md-6 ">
-							<img src="images/nagradnibodovi.png" alt="Nagradni bodovi"/>
+					</div>
+						<div class="col-md-6 dekstop-site  toppadding20 ">
+							<img  src="images/nagradnibodovi.png" alt="Nagradni bodovi"/>
 						</div>
 
 
-					</div>
+
+
 
 
 
@@ -317,11 +339,11 @@
 				<div class="row clearfix">
 
 					<div class="col-xl-12">
-						<div class=" topmargin bottommargin-lg center">
-							<h2>FAQ(često postavljana pitanja)</h2>
+						<div class=" topmargin bottommargin-xs center">
+							<h2>FAQ (često postavljana pitanja)</h2>
 						</div>
 
-						<div class="toggle">
+						<div class="toggle toppadding50">
 							<div class="togglet"><i class="toggle-closed  icon-angle-down"></i><i class="toggle-open icon-angle-up"></i> 1. Što je LeoClub loyalty program?</div>
 							<div class="togglec">LeoClub loyalty program je program nagrađivanja koji ti omogućuje pogodnosti za kupovinu ili korištenje proizvoda i usluga u poslovnicama ili na web shopu Polleo Sporta.</div>
 						</div>
@@ -466,7 +488,7 @@
             ============================================= -->
 			<div class="footer-widgets-wrap clearfix">
 
-				<div class=" topmargin bottommargin center">
+				<div class="  bottommargin center">
 					<h2>Imaš pitanje?</h2>
 				</div>
 
@@ -529,7 +551,7 @@
 
 				<div class="col_half col_last tright  bottommargin-xs toppadding50">
 					<div class="fright clearfix">
-						<p>© 2019, LeoClub by Polleo Sport • Polleo Adria d.o.o. • Sva prava pridržana</p>
+						<p>© 2022, LeoClub by Polleo Sport • Polleo Adria d.o.o. • Sva prava pridržana</p>
 
 					</div>
 
